--- a/app/src/main/res/layout-land/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout-land/activity_tambah_pelanggan.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bglaundryyrill"
+    android:background="@drawable/landbg"
     tools:context=".TambahPelanggan">
 
     <TextView
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvJudul"
         android:text="TAMBAH PELANGGAN"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsbold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -28,8 +28,8 @@
         android:text="Nama"
         app:layout_constraintTop_toBottomOf="@+id/tvJudul"
         android:textSize="18sp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsmedium"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -40,7 +40,7 @@
         android:hint="Nama Lengkap"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNama"
+        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -52,11 +52,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvAlamat"
         android:text="Alamat"
-        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
+        app:layout_constraintTop_toBottomOf="@+id/tvNama"
         android:textSize="18sp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/poppinsmedium"
-        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
         android:id="@+id/etAlamat"
@@ -65,10 +65,11 @@
         android:hint="Alamat"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
+        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
-        android:background="@drawable/edit_text_border"        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/edit_text_border"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         />
     <TextView
@@ -76,11 +77,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvNoHp"
         android:text="No HP Aktif"
-        app:layout_constraintTop_toBottomOf="@+id/etAlamat"
+        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
         android:textSize="18sp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/poppinsmedium"
-        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
         android:id="@+id/etNoHp"
@@ -89,7 +90,7 @@
         android:hint="No HP Aktif"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
+        app:layout_constraintTop_toBottomOf="@+id/etAlamat"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -100,12 +101,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvCabang"
-        android:text="Cabang"
-        app:layout_constraintTop_toBottomOf="@+id/etNoHp"
+        android:text="No HP Aktif"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
         android:textSize="18sp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/poppinsmedium"
-        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
         android:id="@+id/etCabang"
@@ -114,7 +115,7 @@
         android:hint="Nama Cabang"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCabang"
+        app:layout_constraintTop_toBottomOf="@+id/etNoHp"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -130,8 +131,9 @@
         android:backgroundTint="#133E87"
         android:padding="12dp"
         android:fontFamily="@font/poppinssemibold"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/etCabang"
+        android:textColor="@color/white"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@id/etNoHp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
