--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,76 +92,114 @@
                 android:layout_height="2dp"
                 android:background="#A6AEBF" />
 
-            <LinearLayout
+            <GridLayout
+                android:id="@+id/bawah_estimasi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="30dp"
-                android:weightSum="3">
+                android:columnCount="3"
+                android:rowCount="2"
+                android:layout_marginTop="0dp"
+                >
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_transaksi"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:layout_margin="8dp">
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/transaction" />
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="90dp"
                         android:layout_height="wrap_content"
-                        android:text="Transaksi"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/poppinsbold"
-                        android:layout_marginTop="4dp" />
-                </LinearLayout>
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:padding="8dp">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                        <ImageView
+                            android:id="@+id/icon_transaksi"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/transaction"
+                            android:contentDescription="Akun" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Transaksi"
+                            android:fontFamily="@font/poppinssemibold"
+                            android:textSize="14sp"
+                            android:layout_marginTop="8dp" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_pelanggan"
+                    app:cardElevation="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:layout_margin="8dp">
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/customer" />
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="90dp"
+
                         android:layout_height="wrap_content"
-                        android:text="Pelanggan"
-                        android:fontFamily="@font/poppinsbold"
-                        android:textSize="14sp"
-                        android:layout_marginTop="4dp" />
-                </LinearLayout>
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:padding="8dp">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                        <ImageView
+                            android:id="@+id/icon_pelanggan"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/customer"
+                            android:contentDescription="Akun" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Pelanggan"
+                            android:textSize="13sp"
+                            android:fontFamily="@font/poppinssemibold"
+                            android:layout_marginTop="8dp" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_laporan"
+                    android:layout_width="wrap_content"
+                    app:cardElevation="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:layout_margin="8dp">
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="5dp"
-                        android:src="@drawable/report" />
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="90dp"
                         android:layout_height="wrap_content"
-                        android:text="Laporan"
-                        android:fontFamily="@font/poppinsbold"
-                        android:textSize="14sp"
-                        android:layout_marginTop="4dp" />
-                </LinearLayout>
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:padding="8dp">
 
+                        <ImageView
+                            android:id="@+id/icon_laporan"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/report"
+                            android:contentDescription="Akun" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Transaksi"
+                            android:textSize="14sp"
+                            android:fontFamily="@font/poppinssemibold"
+                            android:layout_marginTop="8dp" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+            </GridLayout>
             </LinearLayout>
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
